Fix collapsed card styling
Default Bootstrap collapse behavior broken by custom card styling setting min height.
Toggle min height based on whether card collapsed or not.

--- a/src/angular/planit/src/assets/sass/components/_card.scss
+++ b/src/angular/planit/src/assets/sass/components/_card.scss
@@ -5,6 +5,10 @@
   margin-bottom: 1.5rem;
   display: flex;
   flex-direction: column;
+
+  &.collapsed {
+    min-height: 0px;
+  }
 }
 
 .card-header {
